[workspace]
members = [
    "contracts",
    "encryption"
]


## remember to exclude examples and mock


[package]
name = "graphenet-protocol"
version = "0.1.0"
authors = ["Menna <emanuele.cryptdev@gmail.com>"]
edition = "2021"

license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/0xMenna01/graphenet-protocol"
description = "Library for ink! smart contracts for confidentiality and accessibility of multiple accesses"
keywords = ["blockchain", "smart-contracts", "ink", "wasm", "graphene"]
categories = ["no-std", "embedded"]
include = ["Cargo.toml", "src/**/*.rs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ink = { version = "4.1.0", default-features = false}


scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

[lib]
name = "graphenet"
path = "src/lib.rs"
crate-type = [
    "rlib",
]

[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std"]
